# openjson

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
crates/json-vis-core/: Cargo.toml
crates/json-vis-core/src/: diff.rs  graph.rs  lib.rs  limits.rs  parse.rs  query.rs  schema.rs  util.rs
docs/: index.html
scripts/: bench.sh  release.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src/components/: ComparePanel.tsx  ContextMenu.tsx  EmptyState.tsx  GraphView.tsx  Inspector.tsx  JsonFlowNode.tsx  QueryPanel.tsx  SchemaPanel.tsx  Sidebar.tsx  TopBar.tsx  TreeView.tsx  ValueRenderer.tsx  icons.tsx
src/lib/: api.ts  browser-api.ts  clipboard.ts  layout.ts  limits.ts  links.ts  load-files.ts  render.ts
src/stores/: workspace.ts
src/types/: index.ts
