[package]
name = "json-vis"
version = "0.1.2"
description = "High-performance JSON visualization and data quality tool"
authors = ["Jonathan Koch"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "json_vis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
json-vis-core = { path = "../crates/json-vis-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
